@@ -9,6 +9,13 @@ Version 3.7 (XX XXth, 2025) - ""
 Users now can set the 'serial_device' setting (registry key) to a COM port,
 to attach to the WPC/WPC95 serial printer interface.
 
+Workaround a crash / race-condition when reading PinMAME state, e.g. when exiting VPX
+
+*** CORE/CPU ***
+Fixed a potential small problem with Bally VideoPins sound emulation
+Added PWM segment support to System 11 games
+Added PWM support to CFTBL backglass flashers
+
 *** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran
 Correct Dumps:
 DE: Batman 1.06 (just using correct name for the display rom (1.02 instead of 1.06))
@@ -18,6 +25,7 @@ Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
 High Speed (G-4 aka German PROTO4)
 Soccer Kings (alternate set 2)
+Super Mario Bros. (Spanish / Vifico license) (unfortunately misses the spanish display ROM)
 Victory (1.1 multiplayer MOD), (1.2 multiplayer MOD)
 
 
